4. Timesheet CRUD Pages

--- a/RebootIT.TimesheetApp/Views/Shared/_Layout.cshtml
+++ b/RebootIT.TimesheetApp/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Location" asp-action="Index">Location</a></li>
                     <li><a asp-area="" asp-controller="Client" asp-action="Index">Client</a></li>
+                    <li><a asp-area="" asp-controller="Timesheet" asp-action="Index">Timesheet</a></li>
                 </ul>
             </div>
         </div>
