--- a/RebootIT.TimesheetApp/Views/Staff/Index.cshtml
+++ b/RebootIT.TimesheetApp/Views/Staff/Index.cshtml
@@ -40,7 +40,7 @@
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                <a asp-controller="Timesheet" asp-action="FilteredIndex" asp-route-id="@item.Id">Timesheets</a>
+                <a asp-controller="Timesheet" asp-action="StaffFilteredIndex" asp-route-id="@item.Id">Timesheets</a>
             </td>
         </tr>
 }
