--- a/RebootIT.TimesheetApp/Views/Timesheet/StaffIndex.cshtml
+++ b/RebootIT.TimesheetApp/Views/Timesheet/StaffIndex.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create" asp-items=Id>Create New</a>
+    <a asp-action="StaffFilteredCreate" asp-items=Id asp-route-staffId="@Model.StaffId">Create New</a>
 </p>
 <table class="table">
     <thead>
