--- a/RebootIT.TimesheetApp/Views/Timesheet/LocationIndex.cshtml
+++ b/RebootIT.TimesheetApp/Views/Timesheet/LocationIndex.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create" asp-items=Id>Create New</a>
+    <a asp-action="LocationFilteredCreate" asp-items=Id asp-route-locationId="@Model.LocationId">Create New</a>
 </p>
 <table class="table">
     <thead>
