--- a/RebootIT.TimesheetApp/Views/Timesheet/Details.cshtml
+++ b/RebootIT.TimesheetApp/Views/Timesheet/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.Staff)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Staff.Email)
+            @Html.DisplayFor(model => model.Staff.Fullname)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Location)
